// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crawler spec Should be able to construct hierarchical slices 1`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF'
});
"
`;

exports[`Crawler spec Should be able to construct hierarchical slices 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
import { TabPane } from './TabPane';
import { ContentPane } from './ContentPane';
export class Component extends React.Component {
    render() {
        return (
            <div className={componentStyle.content}>
                <TabPane />
                <ContentPane />
            </div>
        );
    }
}
"
`;

exports[`Crawler spec Should be able to parse a simple HTML file and generate the styles & React comps 1`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF', fern: '#008000' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF',
    $nest: { '&:hover': { background: '#008000' } }
});
"
`;

exports[`Crawler spec Should be able to parse a simple HTML file and generate the styles & React comps 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
export class Component extends React.Component {
    render() {
        return <p className={componentStyle.content}>Test content</p>;
    }
}
"
`;

exports[`Crawler spec Should dedupe similar markup and pass correct props to the child components created 1`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF', fern: '#008000' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF',
    $nest: { '&hover': { background: '#008000' } }
});
"
`;

exports[`Crawler spec Should dedupe similar markup and pass correct props to the child components created 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
import { TabItem } from './TabItem';
export class Component extends React.Component {
    render() {
        return (
            <div className={componentStyle.content}>
                <TabItem />
                <TabItem
                    tabItemClass={'tab-item-second'}
                    aClsHref={
                        'file:///home/gcazaciuc/slice-machine/src/fixtures/markup-dedupe.html/xyz/2'
                    }
                    aClsText={'Test another content'}
                />
                <TabItem
                    tabItemClass={'tab-item-third'}
                    aClsHref={
                        'file:///home/gcazaciuc/slice-machine/src/fixtures/markup-dedupe.html/#'
                    }
                    aClsText={'Third item            '}
                />
            </div>
        );
    }
}
"
`;

exports[`Crawler spec Should parse inline styles on elements 1`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF', fern: '#008000' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF',
    $nest: { '&:hover': { background: '#008000' } }
});
"
`;

exports[`Crawler spec Should parse inline styles on elements 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
export class Component extends React.Component {
    render() {
        return <p className={componentStyle.content}>Test content</p>;
    }
}
"
`;

exports[`Crawler spec Should parse pseudo classes styles on elements 1`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF', fern: '#008000' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF',
    $nest: { '&:hover': { background: '#008000' } }
});
"
`;

exports[`Crawler spec Should parse pseudo classes styles on elements 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
export class Component extends React.Component {
    render() {
        return <p className={componentStyle.content}>Test content</p>;
    }
}
"
`;

exports[`Crawler spec Should transform relative URLs to absolute 1`] = `
"import { style } from 'typestyle';
const colors = {};
export const imgCls = style({});
"
`;

exports[`Crawler spec Should transform relative URLs to absolute 2`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
export class Component extends React.Component {
    render() {
        return (
            <p className={componentStyle.imgCls}>
                <img
                    src={
                        'file:///home/gcazaciuc/slice-machine/src/fixtures/absolute-urls.html/img.jpg'
                    }
                    className={componentStyle.imgCls}
                />
            </p>
        );
    }
}
"
`;

exports[`Crawler spec Should transform relative URLs to absolute 3`] = `
"import { style } from 'typestyle';
const colors = { purpleHeart: '#0000FF', fern: '#008000' };
export const content = style({
    width: '100px',
    height: '100px',
    background: '#0000FF',
    $nest: { '&:hover': { background: '#008000' } }
});
"
`;

exports[`Crawler spec Should transform relative URLs to absolute 4`] = `
"import * as React from 'react';
import * as componentStyle from './ComponentStyle';
export class Component extends React.Component {
    render() {
        return <p className={componentStyle.content}>Test content</p>;
    }
}
"
`;
